tests/syntax_error/string_continue_on_next_line.jou
import "stdlib/io.jou"

def main() -> int:
    a = '\
    't\''
    printf(a)
    return 0
